<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".MyActivity"
    android:background="@drawable/planets"
    android:isScrollContainer="true">
    <View
        android:layout_width="fill_parent"
        android:layout_height="90dp">
    </View>
    <TextView
        android:text="@string/hello_world"
        android:textAppearance="@style/sectionHeader"
        android:gravity="center"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/white"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@android:color/transparent"/>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_age"
            android:layout_column="1"
            android:inputType="number"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:gravity="center"
            android:layout_weight="1"
            android:hint="@string/input_age"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:editable="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_weight"
            android:layout_column="4"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:gravity="center"
            android:hint="@string/input_weight"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:editable="true"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="7dp">
        </View>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_src_planet"
            android:text="@string/text_src_planet"
            android:textSize="20sp"

            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_column="1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_target_planet"
                android:text="@string/text_target_planet"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_column="4" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_column="1"
            android:id="@+id/radioGroupAgeFrom"
            android:textAlignment="center">
            <RadioButton android:id="@+id/radio_mercury"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mercury"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_venus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_venus"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_earth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_earth"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_mars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mars"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_jupiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_jupiter"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_saturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_saturn"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <RadioButton android:id="@+id/radio_uranus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_uranus"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>



            <RadioButton android:id="@+id/radio_neptune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_neptune"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </RadioGroup>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_column="4"
        android:layout_gravity="center"
        android:id="@+id/radioGroupAgeTo"
        android:textAlignment="center">

        <RadioButton android:id="@+id/radio_mercury_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mercury_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_venus_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_venus_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_earth_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_earth_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_mars_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mars_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_jupiter_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_jupiter_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_saturn_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_saturn_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_uranus_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_uranus_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <RadioButton android:id="@+id/radio_neptune_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_neptune_target"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

    </RadioGroup>

</TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp">
        </View>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/white">
        </View>
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            style="@style/button_text"
            android:background="@drawable/red_button"
            android:text="Convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:layout_column="1"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"

            android:textAlignment="center"/>

        <Button
            style="@style/button_text"
            android:background="@drawable/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear "
            android:id="@+id/btn_clear"
            android:layout_column="4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textAlignment="center"

            android:textSize="12sp"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <View
            android:layout_width="fill_parent"
            android:layout_height="20sp">
        </View>




        </TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_result_age"
        android:text="@string/text_result_age"
        android:textSize="20sp"

        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:textStyle="bold"


        android:layout_column="0" />

</TableLayout>
